Remove instantiation of Number subclasses in ClassToInstanceMultimapTest